--- a/.gitignore
+++ b/.gitignore
@@ -205,3 +205,10 @@ cython_debug/
 marimo/_static/
 marimo/_lsp/
 __marimo__/
+
+# Mac OS
+.DS_Store
+
+# Manim
+**/media/Tex/
+**/media/Videos/**/partial_movie_files/
